// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AddCredentialModal should call onSubmit with the correct filtered data when "Save" is clicked: onSubmit, filtered data 1`] = `
{
  "cred_type": "network",
  "name": "Test Credential",
  "password": "<redacted>",
  "username": "demo",
}
`;

exports[`AddCredentialModal should render a basic component: basic 1`] = `
<Modal
  variant="small"
  title="t([
  "view.credentials.modal-title.add",
  {
    "type": ""
  }
])"
  isOpen
  onClose={[Function]}
  className=""
  titleIconVariant={null}
  titleLabel=""
  aria-label=""
  showClose
  aria-describedby=""
  aria-labelledby=""
  id={undefined}
  actions={[]}
  hasNoBodyWrapper={false}
  appendTo={[Function]}
  ouiaSafe
  position="default"
>
  <CredentialForm
  credential={undefined}
  credentialType={undefined}
  errors={undefined}
  onClose={[Function]}
  onSubmit={[Function]}
  onClearErrors={[Function]}
 />
</Modal>
`;

exports[`CredentialForm - secret input field should display optional secret for credential with that secret: optional-existing-filled 1`] = `
<Form>
  <FormGroup
  label="t([
  "view.credentials.add-modal.name.label"
])"
  isRequired
  fieldId="name"
>
  <TextInput
  value="Old credential name"
  placeholder="t([
  "view.credentials.add-modal.name.placeholder"
])"
  isRequired
  type="text"
  id="credential-name"
  name="name"
  validated="default"
  onChange={[Function]}
  ouiaId="cred_name"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.credentials.add-modal.auth_type.label"
])"
  fieldId="auth_type"
>
  <SimpleDropdown
  label="SSH Key"
  menuToggleOuiaId="auth_type"
  variant="default"
  isFullWidth
  onSelect={[Function]}
  dropdownItems={[
        {
          "item": "Username and Password",
          "ouiaId": "password",
        },
        {
          "item": "SSH Key",
          "ouiaId": "ssh_key",
        },
      ]}
 />
</FormGroup>
  false
  false
  <React.Fragment>
  <FormGroup
  label="t([
  "view.credentials.add-modal.username.label"
])"
  isRequired
  fieldId="username"
>
  <TextInput
  value="discovery"
  isRequired={false}
  placeholder="t([
  "view.credentials.add-modal.username.placeholder"
])"
  id="credential-username"
  name="username"
  validated="default"
  onChange={[Function]}
  ouiaId="username"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.credentials.add-modal.ssh_key.label"
])"
  isRequired
  fieldId="ssh_key"
>
  <TextArea
  value=""
  placeholder="****"
  isRequired={false}
  id="credential-ssh-key"
  name="ssh_key"
  validated="default"
  onChange={[Function]}
  rows={10}
  data-ouia-component-id="ssh_key"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.credentials.add-modal.ssh_passphrase.label"
])"
  fieldId="ssh_passphrase"
>
  <SecretInput
  value=""
  placeholder="t([
  "view.credentials.add-modal.ssh_passphrase.placeholder"
])"
  id="ssh_passphrase"
  name="ssh_passphrase"
  validated="default"
  ouiaId="ssh_passphrase"
  onChange={[Function]}
  onEditBegin={[Function]}
  onUndo={[Function]}
  hasSecret
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
</React.Fragment>
  <React.Fragment>
  <FormGroup
  label="t([
  "view.credentials.add-modal.become_method.label"
])"
  fieldId="become_method"
>
  <SimpleDropdown
  label="sudo"
  menuToggleOuiaId="become_method"
  variant="default"
  isFullWidth
  onSelect={[Function]}
  dropdownItems={[
          {
            "item": "t([
  "view.credentials.add-modal.become_method.default_value"
])",
            "ouiaId": "default",
          },
          {
            "item": "sudo",
            "ouiaId": "sudo",
          },
          {
            "item": "su",
            "ouiaId": "su",
          },
          {
            "item": "pbrun",
            "ouiaId": "pbrun",
          },
          {
            "item": "pfexec",
            "ouiaId": "pfexec",
          },
          {
            "item": "doas",
            "ouiaId": "doas",
          },
          {
            "item": "dzdo",
            "ouiaId": "dzdo",
          },
          {
            "item": "ksu",
            "ouiaId": "ksu",
          },
          {
            "item": "runas",
            "ouiaId": "runas",
          },
        ]}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.credentials.add-modal.become_user.label"
])"
  fieldId="become_user"
>
  <TextInput
  value="root"
  placeholder="t([
  "view.credentials.add-modal.become_user.placeholder"
])"
  type="text"
  id="become_user"
  name="become_user"
  validated="default"
  onChange={[Function]}
  ouiaId="become_user"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.credentials.add-modal.become_password.label"
])"
  fieldId="become_password"
>
  <SecretInput
  value=""
  placeholder="t([
  "view.credentials.add-modal.become_password.placeholder"
])"
  id="become_password"
  name="become_password"
  validated="default"
  onChange={[Function]}
  onEditBegin={[Function]}
  onUndo={[Function]}
  hasSecret
  ouiaId="become_password"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
</React.Fragment>
  <ActionGroup>
  <Button
  variant="primary"
  onClick={[Function]}
  isDisabled={false}
>
  "t([
  "view.credentials.add-modal.actions.save"
])"
</Button>
  <Button
  variant="link"
  onClick={[Function]}
>
  "t([
  "view.credentials.add-modal.actions.cancel"
])"
</Button>
</ActionGroup>
</Form>
`;

exports[`CredentialForm - secret input field should display optional secret for credential without that secret: optional-existing-not-filled 1`] = `
<Form>
  <FormGroup
  label="t([
  "view.credentials.add-modal.name.label"
])"
  isRequired
  fieldId="name"
>
  <TextInput
  value="Old credential name"
  placeholder="t([
  "view.credentials.add-modal.name.placeholder"
])"
  isRequired
  type="text"
  id="credential-name"
  name="name"
  validated="default"
  onChange={[Function]}
  ouiaId="cred_name"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.credentials.add-modal.auth_type.label"
])"
  fieldId="auth_type"
>
  <SimpleDropdown
  label="Username and Password"
  menuToggleOuiaId="auth_type"
  variant="default"
  isFullWidth
  onSelect={[Function]}
  dropdownItems={[
        {
          "item": "Username and Password",
          "ouiaId": "password",
        },
        {
          "item": "SSH Key",
          "ouiaId": "ssh_key",
        },
      ]}
 />
</FormGroup>
  false
  <React.Fragment>
  <FormGroup
  label="t([
  "view.credentials.add-modal.username.label"
])"
  isRequired
  fieldId="username"
>
  <TextInput
  value="discovery"
  isRequired={false}
  placeholder="t([
  "view.credentials.add-modal.username.placeholder"
])"
  id="credential-username"
  name="username"
  validated="default"
  onChange={[Function]}
  ouiaId="username"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.credentials.add-modal.password.label"
])"
  isRequired
  fieldId="password"
>
  <SecretInput
  value=""
  isRequired={false}
  placeholder="t([
  "view.credentials.add-modal.password.placeholder"
])"
  id="credential-password"
  name="password"
  validated="default"
  onChange={[Function]}
  onEditBegin={[Function]}
  onUndo={[Function]}
  hasSecret
  ouiaId="password"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
</React.Fragment>
  false
  <React.Fragment>
  <FormGroup
  label="t([
  "view.credentials.add-modal.become_method.label"
])"
  fieldId="become_method"
>
  <SimpleDropdown
  label="sudo"
  menuToggleOuiaId="become_method"
  variant="default"
  isFullWidth
  onSelect={[Function]}
  dropdownItems={[
          {
            "item": "t([
  "view.credentials.add-modal.become_method.default_value"
])",
            "ouiaId": "default",
          },
          {
            "item": "sudo",
            "ouiaId": "sudo",
          },
          {
            "item": "su",
            "ouiaId": "su",
          },
          {
            "item": "pbrun",
            "ouiaId": "pbrun",
          },
          {
            "item": "pfexec",
            "ouiaId": "pfexec",
          },
          {
            "item": "doas",
            "ouiaId": "doas",
          },
          {
            "item": "dzdo",
            "ouiaId": "dzdo",
          },
          {
            "item": "ksu",
            "ouiaId": "ksu",
          },
          {
            "item": "runas",
            "ouiaId": "runas",
          },
        ]}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.credentials.add-modal.become_user.label"
])"
  fieldId="become_user"
>
  <TextInput
  value="root"
  placeholder="t([
  "view.credentials.add-modal.become_user.placeholder"
])"
  type="text"
  id="become_user"
  name="become_user"
  validated="default"
  onChange={[Function]}
  ouiaId="become_user"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.credentials.add-modal.become_password.label"
])"
  fieldId="become_password"
>
  <SecretInput
  value=""
  placeholder="t([
  "view.credentials.add-modal.become_password.placeholder"
])"
  id="become_password"
  name="become_password"
  validated="default"
  onChange={[Function]}
  onEditBegin={[Function]}
  onUndo={[Function]}
  hasSecret={false}
  ouiaId="become_password"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
</React.Fragment>
  <ActionGroup>
  <Button
  variant="primary"
  onClick={[Function]}
  isDisabled={false}
>
  "t([
  "view.credentials.add-modal.actions.save"
])"
</Button>
  <Button
  variant="link"
  onClick={[Function]}
>
  "t([
  "view.credentials.add-modal.actions.cancel"
])"
</Button>
</ActionGroup>
</Form>
`;

exports[`CredentialForm should call handlers for handleInputChange - SSH Key: handleInputChange 1`] = `
[
  [
    "username",
    "d",
  ],
  [
    "username",
    "i",
  ],
  [
    "username",
    "s",
  ],
  [
    "username",
    "c",
  ],
  [
    "username",
    "o",
  ],
  [
    "username",
    "v",
  ],
  [
    "username",
    "e",
  ],
  [
    "username",
    "r",
  ],
  [
    "username",
    "y",
  ],
  [
    "ssh_key",
    "s",
  ],
  [
    "ssh_key",
    "ss",
  ],
  [
    "ssh_key",
    "ssh",
  ],
  [
    "ssh_key",
    "ssh ",
  ],
  [
    "ssh_key",
    "ssh k",
  ],
  [
    "ssh_key",
    "ssh ke",
  ],
  [
    "ssh_key",
    "ssh key",
  ],
  [
    "ssh_key",
    "ssh key ",
  ],
  [
    "ssh_key",
    "ssh key f",
  ],
  [
    "ssh_key",
    "ssh key fi",
  ],
  [
    "ssh_key",
    "ssh key fil",
  ],
  [
    "ssh_key",
    "ssh key file",
  ],
  [
    "ssh_key",
    "ssh key file ",
  ],
  [
    "ssh_key",
    "ssh key file c",
  ],
  [
    "ssh_key",
    "ssh key file co",
  ],
  [
    "ssh_key",
    "ssh key file con",
  ],
  [
    "ssh_key",
    "ssh key file cont",
  ],
  [
    "ssh_key",
    "ssh key file conte",
  ],
  [
    "ssh_key",
    "ssh key file conten",
  ],
  [
    "ssh_key",
    "ssh key file content",
  ],
  [
    "ssh_passphrase",
    "s",
  ],
  [
    "ssh_passphrase",
    "se",
  ],
  [
    "ssh_passphrase",
    "sec",
  ],
  [
    "ssh_passphrase",
    "secr",
  ],
  [
    "ssh_passphrase",
    "secre",
  ],
  [
    "ssh_passphrase",
    "secret",
  ],
  [
    "ssh_passphrase",
    "secret!",
  ],
]
`;

exports[`CredentialForm should call handlers for setAuthType and handleInputChange - Token: handleInputChange 1`] = `
[
  [
    "auth_token",
    "s",
  ],
  [
    "auth_token",
    "u",
  ],
  [
    "auth_token",
    "p",
  ],
  [
    "auth_token",
    "e",
  ],
  [
    "auth_token",
    "r",
  ],
  [
    "auth_token",
    " ",
  ],
  [
    "auth_token",
    "s",
  ],
  [
    "auth_token",
    "e",
  ],
  [
    "auth_token",
    "c",
  ],
  [
    "auth_token",
    "r",
  ],
  [
    "auth_token",
    "e",
  ],
  [
    "auth_token",
    "t",
  ],
  [
    "auth_token",
    " ",
  ],
  [
    "auth_token",
    "A",
  ],
  [
    "auth_token",
    "P",
  ],
  [
    "auth_token",
    "I",
  ],
  [
    "auth_token",
    " ",
  ],
  [
    "auth_token",
    "t",
  ],
  [
    "auth_token",
    "o",
  ],
  [
    "auth_token",
    "k",
  ],
  [
    "auth_token",
    "e",
  ],
  [
    "auth_token",
    "n",
  ],
]
`;

exports[`CredentialForm should call handlers for setAuthType and handleInputChange - Username and Password: handleInputChange 1`] = `
[
  [
    "username",
    "d",
  ],
  [
    "username",
    "i",
  ],
  [
    "username",
    "s",
  ],
  [
    "username",
    "c",
  ],
  [
    "username",
    "o",
  ],
  [
    "username",
    "v",
  ],
  [
    "username",
    "e",
  ],
  [
    "username",
    "r",
  ],
  [
    "username",
    "y",
  ],
  [
    "password",
    "s",
  ],
  [
    "password",
    "e",
  ],
  [
    "password",
    "c",
  ],
  [
    "password",
    "r",
  ],
  [
    "password",
    "e",
  ],
  [
    "password",
    "t",
  ],
  [
    "password",
    "!",
  ],
  [
    "become_method",
    "sudo",
  ],
  [
    "become_user",
    "r",
  ],
  [
    "become_user",
    "ro",
  ],
  [
    "become_user",
    "roo",
  ],
  [
    "become_user",
    "root",
  ],
  [
    "become_password",
    "s",
  ],
  [
    "become_password",
    "se",
  ],
  [
    "become_password",
    "sec",
  ],
  [
    "become_password",
    "secu",
  ],
  [
    "become_password",
    "secur",
  ],
  [
    "become_password",
    "secure",
  ],
  [
    "become_password",
    "secure ",
  ],
  [
    "become_password",
    "secure s",
  ],
  [
    "become_password",
    "secure se",
  ],
  [
    "become_password",
    "secure sec",
  ],
  [
    "become_password",
    "secure secr",
  ],
  [
    "become_password",
    "secure secre",
  ],
  [
    "become_password",
    "secure secret",
  ],
  [
    "become_password",
    "secure secret!",
  ],
]
`;

exports[`CredentialForm should call handlers for setAuthType and handleInputChange - Username and Password: setAuthType 1`] = `
[
  [
    "SSH Key",
  ],
]
`;

exports[`CredentialForm should render a basic component: basic 1`] = `
<Form>
  <FormGroup
  label="t([
  "view.credentials.add-modal.name.label"
])"
  isRequired
  fieldId="name"
>
  <TextInput
  value=""
  placeholder="t([
  "view.credentials.add-modal.name.placeholder"
])"
  isRequired
  type="text"
  id="credential-name"
  name="name"
  validated="default"
  onChange={[Function]}
  ouiaId="cred_name"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.credentials.add-modal.auth_type.label"
])"
  fieldId="auth_type"
>
  <SimpleDropdown
  label="Username and Password"
  menuToggleOuiaId="auth_type"
  variant="default"
  isFullWidth
  onSelect={[Function]}
  dropdownItems={[
        {
          "item": "Username and Password",
          "ouiaId": "password",
        },
        {
          "item": "SSH Key",
          "ouiaId": "ssh_key",
        },
      ]}
 />
</FormGroup>
  false
  <React.Fragment>
  <FormGroup
  label="t([
  "view.credentials.add-modal.username.label"
])"
  isRequired
  fieldId="username"
>
  <TextInput
  value=""
  isRequired
  placeholder="t([
  "view.credentials.add-modal.username.placeholder"
])"
  id="credential-username"
  name="username"
  validated="default"
  onChange={[Function]}
  ouiaId="username"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.credentials.add-modal.password.label"
])"
  isRequired
  fieldId="password"
>
  <SecretInput
  value=""
  isRequired
  placeholder="t([
  "view.credentials.add-modal.password.placeholder"
])"
  id="credential-password"
  name="password"
  validated="default"
  onChange={[Function]}
  onEditBegin={[Function]}
  onUndo={[Function]}
  hasSecret={undefined}
  ouiaId="password"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
</React.Fragment>
  false
  <React.Fragment>
  <FormGroup
  label="t([
  "view.credentials.add-modal.become_method.label"
])"
  fieldId="become_method"
>
  <SimpleDropdown
  label="t([
  "view.credentials.add-modal.become_method.default_value"
])"
  menuToggleOuiaId="become_method"
  variant="default"
  isFullWidth
  onSelect={[Function]}
  dropdownItems={[
          {
            "item": "t([
  "view.credentials.add-modal.become_method.default_value"
])",
            "ouiaId": "default",
          },
          {
            "item": "sudo",
            "ouiaId": "sudo",
          },
          {
            "item": "su",
            "ouiaId": "su",
          },
          {
            "item": "pbrun",
            "ouiaId": "pbrun",
          },
          {
            "item": "pfexec",
            "ouiaId": "pfexec",
          },
          {
            "item": "doas",
            "ouiaId": "doas",
          },
          {
            "item": "dzdo",
            "ouiaId": "dzdo",
          },
          {
            "item": "ksu",
            "ouiaId": "ksu",
          },
          {
            "item": "runas",
            "ouiaId": "runas",
          },
        ]}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.credentials.add-modal.become_user.label"
])"
  fieldId="become_user"
>
  <TextInput
  value={undefined}
  placeholder="t([
  "view.credentials.add-modal.become_user.placeholder"
])"
  type="text"
  id="become_user"
  name="become_user"
  validated="default"
  onChange={[Function]}
  ouiaId="become_user"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.credentials.add-modal.become_password.label"
])"
  fieldId="become_password"
>
  <SecretInput
  value={undefined}
  placeholder="t([
  "view.credentials.add-modal.become_password.placeholder"
])"
  id="become_password"
  name="become_password"
  validated="default"
  onChange={[Function]}
  onEditBegin={[Function]}
  onUndo={[Function]}
  hasSecret={undefined}
  ouiaId="become_password"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
</React.Fragment>
  <ActionGroup>
  <Button
  variant="primary"
  onClick={[Function]}
  isDisabled
>
  "t([
  "view.credentials.add-modal.actions.save"
])"
</Button>
  <Button
  variant="link"
  onClick={[Function]}
>
  "t([
  "view.credentials.add-modal.actions.cancel"
])"
</Button>
</ActionGroup>
</Form>
`;

exports[`CredentialForm should render form to different cred types appropriately: ansible, "Username and Password" 1`] = `
<Form>
  <FormGroup
  label="t([
  "view.credentials.add-modal.name.label"
])"
  isRequired
  fieldId="name"
>
  <TextInput
  value=""
  placeholder="t([
  "view.credentials.add-modal.name.placeholder"
])"
  isRequired
  type="text"
  id="credential-name"
  name="name"
  validated="default"
  onChange={[Function]}
  ouiaId="cred_name"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  false
  false
  <React.Fragment>
  <FormGroup
  label="t([
  "view.credentials.add-modal.username.label"
])"
  isRequired
  fieldId="username"
>
  <TextInput
  value=""
  isRequired
  placeholder="t([
  "view.credentials.add-modal.username.placeholder"
])"
  id="credential-username"
  name="username"
  validated="default"
  onChange={[Function]}
  ouiaId="username"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.credentials.add-modal.password.label"
])"
  isRequired
  fieldId="password"
>
  <SecretInput
  value=""
  isRequired
  placeholder="t([
  "view.credentials.add-modal.password.placeholder"
])"
  id="credential-password"
  name="password"
  validated="default"
  onChange={[Function]}
  onEditBegin={[Function]}
  onUndo={[Function]}
  hasSecret={undefined}
  ouiaId="password"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
</React.Fragment>
  false
  false
  <ActionGroup>
  <Button
  variant="primary"
  onClick={[Function]}
  isDisabled
>
  "t([
  "view.credentials.add-modal.actions.save"
])"
</Button>
  <Button
  variant="link"
  onClick={[Function]}
>
  "t([
  "view.credentials.add-modal.actions.cancel"
])"
</Button>
</ActionGroup>
</Form>
`;

exports[`CredentialForm should render form to different cred types appropriately: satellite, "Username and Password" 1`] = `
<Form>
  <FormGroup
  label="t([
  "view.credentials.add-modal.name.label"
])"
  isRequired
  fieldId="name"
>
  <TextInput
  value=""
  placeholder="t([
  "view.credentials.add-modal.name.placeholder"
])"
  isRequired
  type="text"
  id="credential-name"
  name="name"
  validated="default"
  onChange={[Function]}
  ouiaId="cred_name"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  false
  false
  <React.Fragment>
  <FormGroup
  label="t([
  "view.credentials.add-modal.username.label"
])"
  isRequired
  fieldId="username"
>
  <TextInput
  value=""
  isRequired
  placeholder="t([
  "view.credentials.add-modal.username.placeholder"
])"
  id="credential-username"
  name="username"
  validated="default"
  onChange={[Function]}
  ouiaId="username"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.credentials.add-modal.password.label"
])"
  isRequired
  fieldId="password"
>
  <SecretInput
  value=""
  isRequired
  placeholder="t([
  "view.credentials.add-modal.password.placeholder"
])"
  id="credential-password"
  name="password"
  validated="default"
  onChange={[Function]}
  onEditBegin={[Function]}
  onUndo={[Function]}
  hasSecret={undefined}
  ouiaId="password"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
</React.Fragment>
  false
  false
  <ActionGroup>
  <Button
  variant="primary"
  onClick={[Function]}
  isDisabled
>
  "t([
  "view.credentials.add-modal.actions.save"
])"
</Button>
  <Button
  variant="link"
  onClick={[Function]}
>
  "t([
  "view.credentials.add-modal.actions.cancel"
])"
</Button>
</ActionGroup>
</Form>
`;

exports[`CredentialForm should render form to different cred types appropriately: vcenter, "Username and Password" 1`] = `
<Form>
  <FormGroup
  label="t([
  "view.credentials.add-modal.name.label"
])"
  isRequired
  fieldId="name"
>
  <TextInput
  value=""
  placeholder="t([
  "view.credentials.add-modal.name.placeholder"
])"
  isRequired
  type="text"
  id="credential-name"
  name="name"
  validated="default"
  onChange={[Function]}
  ouiaId="cred_name"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  false
  false
  <React.Fragment>
  <FormGroup
  label="t([
  "view.credentials.add-modal.username.label"
])"
  isRequired
  fieldId="username"
>
  <TextInput
  value=""
  isRequired
  placeholder="t([
  "view.credentials.add-modal.username.placeholder"
])"
  id="credential-username"
  name="username"
  validated="default"
  onChange={[Function]}
  ouiaId="username"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.credentials.add-modal.password.label"
])"
  isRequired
  fieldId="password"
>
  <SecretInput
  value=""
  isRequired
  placeholder="t([
  "view.credentials.add-modal.password.placeholder"
])"
  id="credential-password"
  name="password"
  validated="default"
  onChange={[Function]}
  onEditBegin={[Function]}
  onUndo={[Function]}
  hasSecret={undefined}
  ouiaId="password"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
</React.Fragment>
  false
  false
  <ActionGroup>
  <Button
  variant="primary"
  onClick={[Function]}
  isDisabled
>
  "t([
  "view.credentials.add-modal.actions.save"
])"
</Button>
  <Button
  variant="link"
  onClick={[Function]}
>
  "t([
  "view.credentials.add-modal.actions.cancel"
])"
</Button>
</ActionGroup>
</Form>
`;

exports[`CredentialForm should render form to rhacs appropriately: rhacs, "Token" 1`] = `
<Form>
  <FormGroup
  label="t([
  "view.credentials.add-modal.name.label"
])"
  isRequired
  fieldId="name"
>
  <TextInput
  value=""
  placeholder="t([
  "view.credentials.add-modal.name.placeholder"
])"
  isRequired
  type="text"
  id="credential-name"
  name="name"
  validated="default"
  onChange={[Function]}
  ouiaId="cred_name"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  false
  <FormGroup
  label="t([
  "view.credentials.add-modal.token.label"
])"
  isRequired
  fieldId="auth_token"
>
  <SecretInput
  value=""
  placeholder="t([
  "view.credentials.add-modal.token.placeholder"
])"
  isRequired
  id="credential-token"
  name="auth_token"
  validated="default"
  onChange={[Function]}
  onEditBegin={[Function]}
  onUndo={[Function]}
  hasSecret={undefined}
  ouiaId="auth_token"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  false
  false
  false
  <ActionGroup>
  <Button
  variant="primary"
  onClick={[Function]}
  isDisabled
>
  "t([
  "view.credentials.add-modal.actions.save"
])"
</Button>
  <Button
  variant="link"
  onClick={[Function]}
>
  "t([
  "view.credentials.add-modal.actions.cancel"
])"
</Button>
</ActionGroup>
</Form>
`;

exports[`CredentialForm should render specific to authType for type network: network, SSH Key 1`] = `
<Form>
  <FormGroup
  label="t([
  "view.credentials.add-modal.name.label"
])"
  isRequired
  fieldId="name"
>
  <TextInput
  value={undefined}
  placeholder="t([
  "view.credentials.add-modal.name.placeholder"
])"
  isRequired
  type="text"
  id="credential-name"
  name="name"
  validated="default"
  onChange={[Function]}
  ouiaId="cred_name"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.credentials.add-modal.auth_type.label"
])"
  fieldId="auth_type"
>
  <SimpleDropdown
  label="SSH Key"
  menuToggleOuiaId="auth_type"
  variant="default"
  isFullWidth
  onSelect={[Function]}
  dropdownItems={[
        {
          "item": "Username and Password",
          "ouiaId": "password",
        },
        {
          "item": "SSH Key",
          "ouiaId": "ssh_key",
        },
      ]}
 />
</FormGroup>
  false
  false
  <React.Fragment>
  <FormGroup
  label="t([
  "view.credentials.add-modal.username.label"
])"
  isRequired
  fieldId="username"
>
  <TextInput
  value={undefined}
  isRequired
  placeholder="t([
  "view.credentials.add-modal.username.placeholder"
])"
  id="credential-username"
  name="username"
  validated="default"
  onChange={[Function]}
  ouiaId="username"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.credentials.add-modal.ssh_key.label"
])"
  isRequired
  fieldId="ssh_key"
>
  <TextArea
  value={undefined}
  placeholder="t([
  "view.credentials.add-modal.ssh_key.placeholder"
])"
  isRequired
  id="credential-ssh-key"
  name="ssh_key"
  validated="default"
  onChange={[Function]}
  rows={10}
  data-ouia-component-id="ssh_key"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.credentials.add-modal.ssh_passphrase.label"
])"
  fieldId="ssh_passphrase"
>
  <SecretInput
  value={undefined}
  placeholder="t([
  "view.credentials.add-modal.ssh_passphrase.placeholder"
])"
  id="ssh_passphrase"
  name="ssh_passphrase"
  validated="default"
  ouiaId="ssh_passphrase"
  onChange={[Function]}
  onEditBegin={[Function]}
  onUndo={[Function]}
  hasSecret={undefined}
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
</React.Fragment>
  <React.Fragment>
  <FormGroup
  label="t([
  "view.credentials.add-modal.become_method.label"
])"
  fieldId="become_method"
>
  <SimpleDropdown
  label="t([
  "view.credentials.add-modal.become_method.default_value"
])"
  menuToggleOuiaId="become_method"
  variant="default"
  isFullWidth
  onSelect={[Function]}
  dropdownItems={[
          {
            "item": "t([
  "view.credentials.add-modal.become_method.default_value"
])",
            "ouiaId": "default",
          },
          {
            "item": "sudo",
            "ouiaId": "sudo",
          },
          {
            "item": "su",
            "ouiaId": "su",
          },
          {
            "item": "pbrun",
            "ouiaId": "pbrun",
          },
          {
            "item": "pfexec",
            "ouiaId": "pfexec",
          },
          {
            "item": "doas",
            "ouiaId": "doas",
          },
          {
            "item": "dzdo",
            "ouiaId": "dzdo",
          },
          {
            "item": "ksu",
            "ouiaId": "ksu",
          },
          {
            "item": "runas",
            "ouiaId": "runas",
          },
        ]}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.credentials.add-modal.become_user.label"
])"
  fieldId="become_user"
>
  <TextInput
  value={undefined}
  placeholder="t([
  "view.credentials.add-modal.become_user.placeholder"
])"
  type="text"
  id="become_user"
  name="become_user"
  validated="default"
  onChange={[Function]}
  ouiaId="become_user"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.credentials.add-modal.become_password.label"
])"
  fieldId="become_password"
>
  <SecretInput
  value={undefined}
  placeholder="t([
  "view.credentials.add-modal.become_password.placeholder"
])"
  id="become_password"
  name="become_password"
  validated="default"
  onChange={[Function]}
  onEditBegin={[Function]}
  onUndo={[Function]}
  hasSecret={undefined}
  ouiaId="become_password"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
</React.Fragment>
  <ActionGroup>
  <Button
  variant="primary"
  onClick={[Function]}
  isDisabled
>
  "t([
  "view.credentials.add-modal.actions.save"
])"
</Button>
  <Button
  variant="link"
  onClick={[Function]}
>
  "t([
  "view.credentials.add-modal.actions.cancel"
])"
</Button>
</ActionGroup>
</Form>
`;

exports[`CredentialForm should render specific to authType for type network: network, Username and Password 1`] = `
<Form>
  <FormGroup
  label="t([
  "view.credentials.add-modal.name.label"
])"
  isRequired
  fieldId="name"
>
  <TextInput
  value={undefined}
  placeholder="t([
  "view.credentials.add-modal.name.placeholder"
])"
  isRequired
  type="text"
  id="credential-name"
  name="name"
  validated="default"
  onChange={[Function]}
  ouiaId="cred_name"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.credentials.add-modal.auth_type.label"
])"
  fieldId="auth_type"
>
  <SimpleDropdown
  label="Username and Password"
  menuToggleOuiaId="auth_type"
  variant="default"
  isFullWidth
  onSelect={[Function]}
  dropdownItems={[
        {
          "item": "Username and Password",
          "ouiaId": "password",
        },
        {
          "item": "SSH Key",
          "ouiaId": "ssh_key",
        },
      ]}
 />
</FormGroup>
  false
  <React.Fragment>
  <FormGroup
  label="t([
  "view.credentials.add-modal.username.label"
])"
  isRequired
  fieldId="username"
>
  <TextInput
  value={undefined}
  isRequired
  placeholder="t([
  "view.credentials.add-modal.username.placeholder"
])"
  id="credential-username"
  name="username"
  validated="default"
  onChange={[Function]}
  ouiaId="username"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.credentials.add-modal.password.label"
])"
  isRequired
  fieldId="password"
>
  <SecretInput
  value={undefined}
  isRequired
  placeholder="t([
  "view.credentials.add-modal.password.placeholder"
])"
  id="credential-password"
  name="password"
  validated="default"
  onChange={[Function]}
  onEditBegin={[Function]}
  onUndo={[Function]}
  hasSecret={undefined}
  ouiaId="password"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
</React.Fragment>
  false
  <React.Fragment>
  <FormGroup
  label="t([
  "view.credentials.add-modal.become_method.label"
])"
  fieldId="become_method"
>
  <SimpleDropdown
  label="t([
  "view.credentials.add-modal.become_method.default_value"
])"
  menuToggleOuiaId="become_method"
  variant="default"
  isFullWidth
  onSelect={[Function]}
  dropdownItems={[
          {
            "item": "t([
  "view.credentials.add-modal.become_method.default_value"
])",
            "ouiaId": "default",
          },
          {
            "item": "sudo",
            "ouiaId": "sudo",
          },
          {
            "item": "su",
            "ouiaId": "su",
          },
          {
            "item": "pbrun",
            "ouiaId": "pbrun",
          },
          {
            "item": "pfexec",
            "ouiaId": "pfexec",
          },
          {
            "item": "doas",
            "ouiaId": "doas",
          },
          {
            "item": "dzdo",
            "ouiaId": "dzdo",
          },
          {
            "item": "ksu",
            "ouiaId": "ksu",
          },
          {
            "item": "runas",
            "ouiaId": "runas",
          },
        ]}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.credentials.add-modal.become_user.label"
])"
  fieldId="become_user"
>
  <TextInput
  value={undefined}
  placeholder="t([
  "view.credentials.add-modal.become_user.placeholder"
])"
  type="text"
  id="become_user"
  name="become_user"
  validated="default"
  onChange={[Function]}
  ouiaId="become_user"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.credentials.add-modal.become_password.label"
])"
  fieldId="become_password"
>
  <SecretInput
  value={undefined}
  placeholder="t([
  "view.credentials.add-modal.become_password.placeholder"
])"
  id="become_password"
  name="become_password"
  validated="default"
  onChange={[Function]}
  onEditBegin={[Function]}
  onUndo={[Function]}
  hasSecret={undefined}
  ouiaId="become_password"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
</React.Fragment>
  <ActionGroup>
  <Button
  variant="primary"
  onClick={[Function]}
  isDisabled
>
  "t([
  "view.credentials.add-modal.actions.save"
])"
</Button>
  <Button
  variant="link"
  onClick={[Function]}
>
  "t([
  "view.credentials.add-modal.actions.cancel"
])"
</Button>
</ActionGroup>
</Form>
`;

exports[`CredentialForm should render specific to authType for type openshift: openshift, "Token" 1`] = `
<Form>
  <FormGroup
  label="t([
  "view.credentials.add-modal.name.label"
])"
  isRequired
  fieldId="name"
>
  <TextInput
  value={undefined}
  placeholder="t([
  "view.credentials.add-modal.name.placeholder"
])"
  isRequired
  type="text"
  id="credential-name"
  name="name"
  validated="default"
  onChange={[Function]}
  ouiaId="cred_name"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.credentials.add-modal.auth_type.label"
])"
  fieldId="auth_type"
>
  <SimpleDropdown
  label="Token"
  menuToggleOuiaId="auth_type"
  variant="default"
  isFullWidth
  onSelect={[Function]}
  dropdownItems={[
        {
          "item": "Token",
          "ouiaId": "auth_token",
        },
        {
          "item": "Username and Password",
          "ouiaId": "password",
        },
      ]}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.credentials.add-modal.token.label"
])"
  isRequired
  fieldId="auth_token"
>
  <SecretInput
  value={undefined}
  placeholder="t([
  "view.credentials.add-modal.token.placeholder"
])"
  isRequired
  id="credential-token"
  name="auth_token"
  validated="default"
  onChange={[Function]}
  onEditBegin={[Function]}
  onUndo={[Function]}
  hasSecret={undefined}
  ouiaId="auth_token"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  false
  false
  false
  <ActionGroup>
  <Button
  variant="primary"
  onClick={[Function]}
  isDisabled
>
  "t([
  "view.credentials.add-modal.actions.save"
])"
</Button>
  <Button
  variant="link"
  onClick={[Function]}
>
  "t([
  "view.credentials.add-modal.actions.cancel"
])"
</Button>
</ActionGroup>
</Form>
`;

exports[`CredentialForm should render specific to authType for type openshift: openshift, "Username and Password" 1`] = `
<Form>
  <FormGroup
  label="t([
  "view.credentials.add-modal.name.label"
])"
  isRequired
  fieldId="name"
>
  <TextInput
  value={undefined}
  placeholder="t([
  "view.credentials.add-modal.name.placeholder"
])"
  isRequired
  type="text"
  id="credential-name"
  name="name"
  validated="default"
  onChange={[Function]}
  ouiaId="cred_name"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.credentials.add-modal.auth_type.label"
])"
  fieldId="auth_type"
>
  <SimpleDropdown
  label="Username and Password"
  menuToggleOuiaId="auth_type"
  variant="default"
  isFullWidth
  onSelect={[Function]}
  dropdownItems={[
        {
          "item": "Token",
          "ouiaId": "auth_token",
        },
        {
          "item": "Username and Password",
          "ouiaId": "password",
        },
      ]}
 />
</FormGroup>
  false
  <React.Fragment>
  <FormGroup
  label="t([
  "view.credentials.add-modal.username.label"
])"
  isRequired
  fieldId="username"
>
  <TextInput
  value={undefined}
  isRequired
  placeholder="t([
  "view.credentials.add-modal.username.placeholder"
])"
  id="credential-username"
  name="username"
  validated="default"
  onChange={[Function]}
  ouiaId="username"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.credentials.add-modal.password.label"
])"
  isRequired
  fieldId="password"
>
  <SecretInput
  value={undefined}
  isRequired
  placeholder="t([
  "view.credentials.add-modal.password.placeholder"
])"
  id="credential-password"
  name="password"
  validated="default"
  onChange={[Function]}
  onEditBegin={[Function]}
  onUndo={[Function]}
  hasSecret={undefined}
  ouiaId="password"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
</React.Fragment>
  false
  false
  <ActionGroup>
  <Button
  variant="primary"
  onClick={[Function]}
  isDisabled
>
  "t([
  "view.credentials.add-modal.actions.save"
])"
</Button>
  <Button
  variant="link"
  onClick={[Function]}
>
  "t([
  "view.credentials.add-modal.actions.cancel"
])"
</Button>
</ActionGroup>
</Form>
`;

exports[`CredentialForm should submit updated credential data: edit credential form, after 1`] = `
"<form novalidate="" class="pf-v6-c-form"><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="name"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.name.label"
])</span><span class="pf-v6-c-form__label-required" aria-hidden="true"> *</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><span class="pf-v6-c-form-control"><input id="credential-name" aria-invalid="false" required="" placeholder="t([
  &quot;view.credentials.add-modal.name.placeholder&quot;
])" data-ouia-component-type="PF6/TextInput" data-ouia-safe="true" data-ouia-component-id="cred_name" type="text" value="Test changing name" name="name"></span></div></div><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="auth_type"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.auth_type.label"
])</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><button class="pf-v6-c-menu-toggle pf-m-full-width" type="button" aria-label="t([
  &quot;simple-dropdown.aria-label&quot;
])" aria-expanded="false" data-ouia-component-type="PF6/MenuToggle" data-ouia-safe="true" data-ouia-component-id="auth_type"><span class="pf-v6-c-menu-toggle__text">Username and Password</span><span class="pf-v6-c-menu-toggle__controls"><span class="pf-v6-c-menu-toggle__toggle-icon"><svg class="pf-v6-svg" viewBox="0 0 320 512" fill="currentColor" aria-hidden="true" role="img" width="1em" height="1em"><path d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"></path></svg></span></span></button></div></div><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="username"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.username.label"
])</span><span class="pf-v6-c-form__label-required" aria-hidden="true"> *</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><span class="pf-v6-c-form-control"><input id="credential-username" aria-invalid="false" placeholder="t([
  &quot;view.credentials.add-modal.username.placeholder&quot;
])" data-ouia-component-type="PF6/TextInput" data-ouia-safe="true" data-ouia-component-id="username" type="text" value="discovery" name="username"></span></div></div><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="password"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.password.label"
])</span><span class="pf-v6-c-form__label-required" aria-hidden="true"> *</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><div class="pf-v6-c-input-group"><div class="pf-v6-c-input-group__item pf-m-fill"><span class="pf-v6-c-form-control pf-m-disabled"><input id="credential-password" aria-invalid="false" disabled="" placeholder="t([
  &quot;secret-input.filled_placeholder&quot;
])" data-ouia-component-type="PF6/TextInput" data-ouia-safe="true" data-ouia-component-id="password" type="text" value="" name="password"></span></div><div class="pf-v6-c-input-group__item"><button class="pf-v6-c-button pf-m-control" type="button" data-ouia-component-type="PF6/Button" data-ouia-safe="true" data-ouia-component-id="secret-edit"><span class="pf-v6-c-button__icon"><svg class="pf-v6-svg" viewBox="0 0 512 512" fill="currentColor" aria-hidden="true" role="img" width="1em" height="1em"><path d="M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1c18.8 18.7 18.8 49.1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z"></path></svg></span></button></div></div></div></div><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="become_method"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.become_method.label"
])</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><button class="pf-v6-c-menu-toggle pf-m-full-width" type="button" aria-label="t([
  &quot;simple-dropdown.aria-label&quot;
])" aria-expanded="false" data-ouia-component-type="PF6/MenuToggle" data-ouia-safe="true" data-ouia-component-id="become_method"><span class="pf-v6-c-menu-toggle__text">t([
  "view.credentials.add-modal.become_method.default_value"
])</span><span class="pf-v6-c-menu-toggle__controls"><span class="pf-v6-c-menu-toggle__toggle-icon"><svg class="pf-v6-svg" viewBox="0 0 320 512" fill="currentColor" aria-hidden="true" role="img" width="1em" height="1em"><path d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"></path></svg></span></span></button></div></div><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="become_user"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.become_user.label"
])</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><span class="pf-v6-c-form-control"><input id="become_user" aria-invalid="false" placeholder="t([
  &quot;view.credentials.add-modal.become_user.placeholder&quot;
])" data-ouia-component-type="PF6/TextInput" data-ouia-safe="true" data-ouia-component-id="become_user" type="text" value="" name="become_user"></span></div></div><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="become_password"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.become_password.label"
])</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><div class="pf-v6-c-input-group"><div class="pf-v6-c-input-group__item pf-m-fill"><span class="pf-v6-c-form-control"><input id="become_password" aria-invalid="false" placeholder="t([
  &quot;view.credentials.add-modal.become_password.placeholder&quot;
])" data-ouia-component-type="PF6/TextInput" data-ouia-safe="true" data-ouia-component-id="become_password" type="password" value="" name="become_password"></span></div></div></div></div><div class="pf-v6-c-form__group pf-m-action"><div class="pf-v6-c-form__group-control"><div class="pf-v6-c-form__actions"><button class="pf-v6-c-button pf-m-primary" type="button" data-ouia-component-type="PF6/Button" data-ouia-safe="true" data-ouia-component-id="OUIA-Generated-Button-primary-9"><span class="pf-v6-c-button__text">t([
  "view.credentials.add-modal.actions.save"
])</span></button><button class="pf-v6-c-button pf-m-link" type="button" data-ouia-component-type="PF6/Button" data-ouia-safe="true" data-ouia-component-id="OUIA-Generated-Button-link-9"><span class="pf-v6-c-button__text">t([
  "view.credentials.add-modal.actions.cancel"
])</span></button></div></div></div></form>"
`;

exports[`CredentialForm should work with default onClose: onClose 1`] = `
"<form novalidate="" class="pf-v6-c-form"><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="name"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.name.label"
])</span><span class="pf-v6-c-form__label-required" aria-hidden="true"> *</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><span class="pf-v6-c-form-control"><input id="credential-name" aria-invalid="false" required="" placeholder="t([
  &quot;view.credentials.add-modal.name.placeholder&quot;
])" data-ouia-component-type="PF6/TextInput" data-ouia-safe="true" data-ouia-component-id="cred_name" type="text" value="" name="name"></span></div></div><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="auth_type"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.auth_type.label"
])</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><button class="pf-v6-c-menu-toggle pf-m-full-width" type="button" aria-label="t([
  &quot;simple-dropdown.aria-label&quot;
])" aria-expanded="false" data-ouia-component-type="PF6/MenuToggle" data-ouia-safe="true" data-ouia-component-id="auth_type"><span class="pf-v6-c-menu-toggle__text">Username and Password</span><span class="pf-v6-c-menu-toggle__controls"><span class="pf-v6-c-menu-toggle__toggle-icon"><svg class="pf-v6-svg" viewBox="0 0 320 512" fill="currentColor" aria-hidden="true" role="img" width="1em" height="1em"><path d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"></path></svg></span></span></button></div></div><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="username"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.username.label"
])</span><span class="pf-v6-c-form__label-required" aria-hidden="true"> *</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><span class="pf-v6-c-form-control"><input id="credential-username" aria-invalid="false" required="" placeholder="t([
  &quot;view.credentials.add-modal.username.placeholder&quot;
])" data-ouia-component-type="PF6/TextInput" data-ouia-safe="true" data-ouia-component-id="username" type="text" value="" name="username"></span></div></div><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="password"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.password.label"
])</span><span class="pf-v6-c-form__label-required" aria-hidden="true"> *</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><div class="pf-v6-c-input-group"><div class="pf-v6-c-input-group__item pf-m-fill"><span class="pf-v6-c-form-control"><input id="credential-password" aria-invalid="false" required="" placeholder="t([
  &quot;view.credentials.add-modal.password.placeholder&quot;
])" data-ouia-component-type="PF6/TextInput" data-ouia-safe="true" data-ouia-component-id="password" type="password" value="" name="password"></span></div></div></div></div><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="become_method"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.become_method.label"
])</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><button class="pf-v6-c-menu-toggle pf-m-full-width" type="button" aria-label="t([
  &quot;simple-dropdown.aria-label&quot;
])" aria-expanded="false" data-ouia-component-type="PF6/MenuToggle" data-ouia-safe="true" data-ouia-component-id="become_method"><span class="pf-v6-c-menu-toggle__text">t([
  "view.credentials.add-modal.become_method.default_value"
])</span><span class="pf-v6-c-menu-toggle__controls"><span class="pf-v6-c-menu-toggle__toggle-icon"><svg class="pf-v6-svg" viewBox="0 0 320 512" fill="currentColor" aria-hidden="true" role="img" width="1em" height="1em"><path d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"></path></svg></span></span></button></div></div><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="become_user"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.become_user.label"
])</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><span class="pf-v6-c-form-control"><input id="become_user" aria-invalid="false" placeholder="t([
  &quot;view.credentials.add-modal.become_user.placeholder&quot;
])" data-ouia-component-type="PF6/TextInput" data-ouia-safe="true" data-ouia-component-id="become_user" type="text" name="become_user"></span></div></div><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="become_password"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.become_password.label"
])</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><div class="pf-v6-c-input-group"><div class="pf-v6-c-input-group__item pf-m-fill"><span class="pf-v6-c-form-control"><input id="become_password" aria-invalid="false" placeholder="t([
  &quot;view.credentials.add-modal.become_password.placeholder&quot;
])" data-ouia-component-type="PF6/TextInput" data-ouia-safe="true" data-ouia-component-id="become_password" type="password" name="become_password"></span></div></div></div></div><div class="pf-v6-c-form__group pf-m-action"><div class="pf-v6-c-form__group-control"><div class="pf-v6-c-form__actions"><button class="pf-v6-c-button pf-m-primary" type="button" data-ouia-component-type="PF6/Button" data-ouia-safe="true" data-ouia-component-id="OUIA-Generated-Button-primary-7"><span class="pf-v6-c-button__text">t([
  "view.credentials.add-modal.actions.save"
])</span></button><button class="pf-v6-c-button pf-m-link" type="button" data-ouia-component-type="PF6/Button" data-ouia-safe="true" data-ouia-component-id="OUIA-Generated-Button-link-7"><span class="pf-v6-c-button__text">t([
  "view.credentials.add-modal.actions.cancel"
])</span></button></div></div></div></form>"
`;

exports[`CredentialForm should work with default onSubmit: onSave 1`] = `
"<form novalidate="" class="pf-v6-c-form"><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="name"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.name.label"
])</span><span class="pf-v6-c-form__label-required" aria-hidden="true"> *</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><span class="pf-v6-c-form-control"><input id="credential-name" aria-invalid="false" required="" placeholder="t([
  &quot;view.credentials.add-modal.name.placeholder&quot;
])" data-ouia-component-type="PF6/TextInput" data-ouia-safe="true" data-ouia-component-id="cred_name" type="text" value="" name="name"></span></div></div><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="auth_type"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.auth_type.label"
])</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><button class="pf-v6-c-menu-toggle pf-m-full-width" type="button" aria-label="t([
  &quot;simple-dropdown.aria-label&quot;
])" aria-expanded="false" data-ouia-component-type="PF6/MenuToggle" data-ouia-safe="true" data-ouia-component-id="auth_type"><span class="pf-v6-c-menu-toggle__text">Username and Password</span><span class="pf-v6-c-menu-toggle__controls"><span class="pf-v6-c-menu-toggle__toggle-icon"><svg class="pf-v6-svg" viewBox="0 0 320 512" fill="currentColor" aria-hidden="true" role="img" width="1em" height="1em"><path d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"></path></svg></span></span></button></div></div><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="username"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.username.label"
])</span><span class="pf-v6-c-form__label-required" aria-hidden="true"> *</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><span class="pf-v6-c-form-control"><input id="credential-username" aria-invalid="false" required="" placeholder="t([
  &quot;view.credentials.add-modal.username.placeholder&quot;
])" data-ouia-component-type="PF6/TextInput" data-ouia-safe="true" data-ouia-component-id="username" type="text" value="" name="username"></span></div></div><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="password"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.password.label"
])</span><span class="pf-v6-c-form__label-required" aria-hidden="true"> *</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><div class="pf-v6-c-input-group"><div class="pf-v6-c-input-group__item pf-m-fill"><span class="pf-v6-c-form-control"><input id="credential-password" aria-invalid="false" required="" placeholder="t([
  &quot;view.credentials.add-modal.password.placeholder&quot;
])" data-ouia-component-type="PF6/TextInput" data-ouia-safe="true" data-ouia-component-id="password" type="password" value="" name="password"></span></div></div></div></div><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="become_method"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.become_method.label"
])</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><button class="pf-v6-c-menu-toggle pf-m-full-width" type="button" aria-label="t([
  &quot;simple-dropdown.aria-label&quot;
])" aria-expanded="false" data-ouia-component-type="PF6/MenuToggle" data-ouia-safe="true" data-ouia-component-id="become_method"><span class="pf-v6-c-menu-toggle__text">t([
  "view.credentials.add-modal.become_method.default_value"
])</span><span class="pf-v6-c-menu-toggle__controls"><span class="pf-v6-c-menu-toggle__toggle-icon"><svg class="pf-v6-svg" viewBox="0 0 320 512" fill="currentColor" aria-hidden="true" role="img" width="1em" height="1em"><path d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"></path></svg></span></span></button></div></div><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="become_user"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.become_user.label"
])</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><span class="pf-v6-c-form-control"><input id="become_user" aria-invalid="false" placeholder="t([
  &quot;view.credentials.add-modal.become_user.placeholder&quot;
])" data-ouia-component-type="PF6/TextInput" data-ouia-safe="true" data-ouia-component-id="become_user" type="text" name="become_user"></span></div></div><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="become_password"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.become_password.label"
])</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><div class="pf-v6-c-input-group"><div class="pf-v6-c-input-group__item pf-m-fill"><span class="pf-v6-c-form-control"><input id="become_password" aria-invalid="false" placeholder="t([
  &quot;view.credentials.add-modal.become_password.placeholder&quot;
])" data-ouia-component-type="PF6/TextInput" data-ouia-safe="true" data-ouia-component-id="become_password" type="password" name="become_password"></span></div></div></div></div><div class="pf-v6-c-form__group pf-m-action"><div class="pf-v6-c-form__group-control"><div class="pf-v6-c-form__actions"><button class="pf-v6-c-button pf-m-primary" type="button" data-ouia-component-type="PF6/Button" data-ouia-safe="true" data-ouia-component-id="OUIA-Generated-Button-primary-8"><span class="pf-v6-c-button__text">t([
  "view.credentials.add-modal.actions.save"
])</span></button><button class="pf-v6-c-button pf-m-link" type="button" data-ouia-component-type="PF6/Button" data-ouia-safe="true" data-ouia-component-id="OUIA-Generated-Button-link-8"><span class="pf-v6-c-button__text">t([
  "view.credentials.add-modal.actions.cancel"
])</span></button></div></div></div></form>"
`;

exports[`getCleanedFormData should clean formData correctly for different authTypes: SSH Key" auth cleanedData " 1`] = `
{
  "auth_token": "test_token",
  "name": "Test Credential",
  "ssh_key": "test_ssh_key",
  "ssh_passphrase": "test_passphrase",
  "username": "test_user",
}
`;

exports[`getCleanedFormData should clean formData correctly for different authTypes: Token" auth cleanedData " 1`] = `
{
  "auth_token": "test_token",
  "name": "Test Credential",
  "ssh_key": "test_ssh_key",
  "ssh_passphrase": "test_passphrase",
  "username": "",
}
`;

exports[`getCleanedFormData should clean formData correctly for different authTypes: Username and Password" auth cleanedData " 1`] = `
{
  "name": "Test Credential",
  "password": "test_password",
  "username": "test_user",
}
`;

exports[`useCredentialForm should allow editing a credential: formData, edit 1`] = `
{
  "auth_token": "",
  "become_method": "",
  "become_password": "",
  "become_user": "",
  "name": "lorem",
  "password": "",
  "ssh_key": "",
  "ssh_passphrase": "",
  "username": "",
}
`;

exports[`useCredentialForm should derive token auth for specific credential types: token auth 1`] = `
{
  "openshift": "Token",
  "rhacs": "Token",
}
`;

exports[`useCredentialForm should derive username + password for specific credential types: username and password 1`] = `
{
  "ansible": "Username and Password",
  "network": "Username and Password",
  "satellite": "Username and Password",
  "vcenter": "Username and Password",
}
`;

exports[`useCredentialForm should initialize formData correctly: formData 1`] = `
{
  "auth_token": "",
  "authenticationType": "",
  "become_method": "",
  "become_password": "",
  "become_user": "",
  "name": "",
  "password": "",
  "ssh_key": "",
  "ssh_passphrase": "",
  "username": "",
}
`;

exports[`useCredentialForm should support implausible case of credential without a name: formData no name, edit 1`] = `
{
  "auth_token": "",
  "become_method": "",
  "become_password": "",
  "become_user": "",
  "name": "",
  "password": "",
  "ssh_key": "",
  "ssh_passphrase": "",
  "username": "",
}
`;

exports[`useCredentialForm should work without formData: emptyFormData 1`] = `
{
  "auth_token": "",
  "authenticationType": "",
  "become_method": "",
  "become_password": "",
  "become_user": "",
  "name": "",
  "password": "",
  "ssh_key": "",
  "ssh_passphrase": "",
  "username": "",
}
`;
